--- a/src/main/resources/forms/FormTask_12-softwareEngineeringProcess.html
+++ b/src/main/resources/forms/FormTask_12-softwareEngineeringProcess.html
@@ -1,11 +1,11 @@
 <form id="formContainer"
-      th:action="@{http://localhost:9010/tasks/complete}"
+      th:action="@{~/tasks/complete}"
       th:object="${formData}"
       method="post"
-      hx-post="http://localhost:9010/tasks/complete"
+      hx-post="/tasks/complete"
       hx-target="#formContainer"
       hx-swap="outerHTML"
-      className="form-section">
+      class="form-section">
 
     <style>
         /* General Form Styling */
@@ -179,11 +179,9 @@
         .btn-complete.processing .default-text {
             display: none;
         }
-
         .btn-complete .processing-text {
             display: none;
         }
-
         .btn-complete.processing .processing-text {
             display: flex;
             align-items: center;
@@ -200,63 +198,54 @@
             margin-right: 8px;
             animation: spin 1s linear infinite;
         }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     </style>
 
     <input type="hidden" th:value="${id}" id="id" name="id">
     <input type="hidden" value="FormTask_12" id="nextPage" name="nextPage">
 
     <!-- Header Section -->
-    <div className="form-header">
+    <div class="form-header">
         <h1>Document Requirements Review</h1>
         <p>Review and edit the requirement document below</p>
     </div>
 
     <!-- Form Content -->
-    <div className="form-content">
-        <div className="mb-6">
-            <div className="flex justify-between items-center mb-4">
-                <h2 className="text-lg font-semibold text-gray-800">Requirement Document</h2>
-                <button type="button" id="toggleViewBtn" className="toggle-btn flex items-center">
+    <div class="form-content">
+        <div class="mb-6">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-lg font-semibold text-gray-800">Requirement Document</h2>
+                <button type="button" id="toggleViewBtn" class="toggle-btn flex items-center">
                     Edit Mode
                 </button>
                 <button type="button"
                         id="downloadBtn"
-                        className="px-4 py-2 rounded-md bg-green-600 text-white hover:bg-green-700"
-                        onClick="downloadAsPDF()">
+                        class="px-4 py-2 rounded-md bg-green-600 text-white hover:bg-green-700"
+                        onclick="downloadAsPDF()">
                     Download as PDF
                 </button>
             </div>
 
             <!-- Display View -->
-            <div id="requirementDisplay" className="document-content">
+            <div id="requirementDisplay" class="document-content">
                 <div th:utext="${aiRequirementAnalysis}"></div>
             </div>
 
             <!-- Edit View -->
-            <div id="requirementEdit" className="hidden">
+            <div id="requirementEdit" class="hidden">
         <textarea id="requirement" name="requirement"
-                  className="form-textarea"
+                  class="form-textarea"
                   th:text="${aiRequirementAnalysis}" required></textarea>
-                <p className="text-sm text-gray-600 mt-2">Edit the requirement document as needed. HTML tags are
-                    supported.</p>
+                <p class="text-sm text-gray-600 mt-2">Edit the requirement document as needed. HTML tags are supported.</p>
             </div>
         </div>
 
         <!-- Submit Button -->
-        <div className="text-center mt-8">
-            <button type="submit" id="completeButton" className="btn-complete">
-                <span className="default-text">Complete Review</span>
-                <span className="processing-text">
-          <span className="loading-spinner"></span>
+        <div class="text-center mt-8">
+            <button type="submit" id="completeButton" class="btn-complete">
+                <span class="default-text">Complete Review</span>
+                <span class="processing-text">
+          <span class="loading-spinner"></span>
           Processing...
         </span>
             </button>
@@ -269,7 +258,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('DOMContentLoaded', function() {
         const toggleBtn = document.getElementById('toggleViewBtn');
         const displayView = document.getElementById('requirementDisplay');
         const editView = document.getElementById('requirementEdit');
@@ -277,14 +266,14 @@
         const completeButton = document.getElementById('completeButton');
 
         // Toggle edit/view
-        toggleBtn.addEventListener('click', function () {
+        toggleBtn.addEventListener('click', function() {
             displayView.classList.toggle('hidden');
             editView.classList.toggle('hidden');
             toggleBtn.textContent = displayView.classList.contains('hidden') ? 'View Mode' : 'Edit Mode';
         });
 
         // Button state on submit
-        form.addEventListener('submit', function () {
+        form.addEventListener('submit', function() {
             completeButton.disabled = true;
             completeButton.classList.add('processing');
         });
@@ -292,8 +281,8 @@
 
     // PDF export
     async function downloadAsPDF() {
-        const {jsPDF} = window.jspdf;
-        const pdf = new jsPDF({unit: 'pt', format: 'a4'});
+        const { jsPDF } = window.jspdf;
+        const pdf = new jsPDF({ unit: 'pt', format: 'a4' });
         const contentDiv = document.getElementById('requirementDisplay');
 
         // Page margins
@@ -342,21 +331,17 @@
             } else if (node.nodeType === Node.ELEMENT_NODE) {
                 const tag = node.tagName.toLowerCase();
 
-                if (tag === "h1") {
-                    addText(node.textContent.trim(), 22, true, 0, 28, 12);
-                } else if (tag === "h2") {
-                    addText(node.textContent.trim(), 18, true, 0, 24, 10);
-                } else if (tag === "h3") {
-                    addText(node.textContent.trim(), 15, true, 0, 20, 8);
-                } else if (tag === "p") {
-                    addText(node.textContent.trim(), 12, false, 0, 18, 6);
-                } else if (tag === "li") {
-                    addText("• " + node.textContent.trim(), 12, false, 15, 18, 2);
-                } else if (tag === "ul" || tag === "ol") {
+                if (tag === "h1") { addText(node.textContent.trim(), 22, true, 0, 28, 12); }
+                else if (tag === "h2") { addText(node.textContent.trim(), 18, true, 0, 24, 10); }
+                else if (tag === "h3") { addText(node.textContent.trim(), 15, true, 0, 20, 8); }
+                else if (tag === "p") { addText(node.textContent.trim(), 12, false, 0, 18, 6); }
+                else if (tag === "li") { addText("• " + node.textContent.trim(), 12, false, 15, 18, 2); }
+                else if (tag === "ul" || tag === "ol") {
                     y += 4;
                     node.childNodes.forEach(child => processNode(child));
                     y += 6;
-                } else if (tag === "table") {
+                }
+                else if (tag === "table") {
                     const rows = [];
                     node.querySelectorAll("tr").forEach(tr => {
                         const row = [];
@@ -373,9 +358,9 @@
                             head: [rows[0]],
                             body: rows.slice(1),
                             startY: y,
-                            margin: {left: margin, right: margin},
-                            styles: {font: "helvetica", fontSize: 10, cellPadding: 5},
-                            headStyles: {fillColor: [66, 133, 244], textColor: 255, halign: "center"}
+                            margin: { left: margin, right: margin },
+                            styles: { font: "helvetica", fontSize: 10, cellPadding: 5 },
+                            headStyles: { fillColor: [66, 133, 244], textColor: 255, halign: "center" }
                         });
                         y = pdf.lastAutoTable.finalY + 20;
                     }
@@ -394,7 +379,7 @@
             pdf.setPage(i);
             pdf.setFontSize(10);
             pdf.setTextColor(150);
-            pdf.text(`Page ${i} of ${pageCount}`, pageWidth - margin, pageHeight - 20, {align: "right"});
+            pdf.text(`Page ${i} of ${pageCount}`, pageWidth - margin, pageHeight - 20, { align: "right" });
         }
 
         pdf.save("formatted-document.pdf");
