--- a/src/main/resources/forms/FormTask_22-softwareEngineeringProcess.html
+++ b/src/main/resources/forms/FormTask_22-softwareEngineeringProcess.html
@@ -1,8 +1,8 @@
 <form id="formContainer"
-      th:action="@{http://localhost:9010/tasks/complete}"
+      th:action="@{~/tasks/complete}"
       th:object="${formData}"
       method="post"
-      hx-post="http://localhost:9010/tasks/complete"
+      hx-post="/tasks/complete"
       hx-target="#formContainer"
       hx-swap="outerHTML"
       hx-on:htmx:before-request="this.querySelector('button[type=submit]').disabled = true; this.querySelector('button[type=submit]').innerHTML = 'Processing...'">
